LCAM-1281|Fix the NPE in mapping DTO to perform hardship request